sandbox/output
FtsTranslator.java:5: error: incompatible types: String cannot be converted to int
        return "word*";
               ^
HikerStepDef.java:11: error: incompatible types: int cannot be converted to String
        output = FtsTranslator.translate(flag, keywords);
                                        ^
2 errors
